Remove marker materials (#5237)